fix sidebar sizing and z-indexes

--- a/tinygis/static/tinygis.css
+++ b/tinygis/static/tinygis.css
@@ -11,14 +11,13 @@ a {
     bottom: 0;
     right: 0;
     top: 0;
-    left: 220px;
+    left: 227px;
     background-color: #bbb;
 }
 
 #tinygis-map {
     position: absolute;
     cursor: crosshair;
-    z-index: 0;
     left: 2px;
     bottom: 2px;
     right: 2px;
@@ -98,7 +97,7 @@ a {
 }
 
 .map-info-box {
-    z-index: 1100;
+    z-index: 1020;
     position: absolute;
     top: 0;
     right: 0;
@@ -185,7 +184,6 @@ a {
     overflow: hidden;
     overflow-y: auto;
     padding: 20px;
-    z-index: 9999;
     width: 180px;
     bottom: 0;
     left: 0;
@@ -205,11 +203,11 @@ a {
     position: absolute;
     background: #C3DDEB;
     cursor: pointer;
-    z-index: 9999;
     left: 220px;
     width: 8px;
     bottom: 0;
     top: 0;
+    z-index: 1020;
 }
 
 #togglebar:hover {
@@ -228,7 +226,7 @@ a {
 }
 
 .alert-container {
-    z-index: 1100;
+    z-index: 1020;
     position: absolute;
     top: 0;
     left: 50px;
